--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "gulp": "gulp",
     "start": "node lib",
     "test": "npm run gulp -- test",
-    "postinstall": "cd nekodev && npm install",
+    "postinstall": "git submodule update --init nekodev && cd nekodev && npm install",
     "watch": "npm run gulp -- watch"
   },
   "repository": {
