--- a/package.json
+++ b/package.json
@@ -23,9 +23,14 @@
   "dependencies": {
     "body-parser": "^1.14.2",
     "byline": "^4.2.1",
+    "config": "^1.19.0",
     "express": "^4.13.4",
     "fs-promise": "^0.4.0",
-    "log4js": "^0.6.30"
+    "knex": "^0.9.0",
+    "lodash": "^4.3.0",
+    "log4js": "^0.6.30",
+    "mysql2": "^0.15.8",
+    "sqlite3": "^3.1.1"
   },
   "devDependencies": {
     "gulp": "^3.9.0",
