--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "config": "^1.19.0",
     "express": "^4.13.4",
     "fs-promise": "^0.4.0",
+    "jade": "^1.11.0",
     "knex": "^0.9.0",
     "lodash": "^4.3.0",
     "log4js": "^0.6.30",
+    "moment": "^2.11.2",
     "mysql2": "^0.15.8",
     "sqlite3": "^3.1.1"
   },
