--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "Inner building container for ukatama/nekobuilder.",
   "main": "index.js",
   "scripts": {
-    "start": "node .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "test": "eslint src && jest"
   },
   "author": "ukatama",
   "license": "MIT",
   "dependencies": {
     "fs-promise": "^0.5.0",
     "js-yaml": "^3.5.3"
+  },
+  "devDependencies": {
+    "eslint": "^2.2.0",
+    "eslint-plugin-node": "^1.0.0",
+    "jest-cli": "^0.8.2"
   }
 }
