--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gulp": "gulp",
     "start": "node lib",
     "test": "npm run gulp -- test",
+    "version": "update-changelog && git add CHANGELOG.md",
     "watch": "npm run gulp -- watch"
   },
   "repository": {
@@ -38,6 +39,7 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "jest-cli": "^0.9.0",
-    "nekodev": "file:./nekodev"
+    "nekodev": "file:./nekodev",
+    "update-changelog": "^1.0.1"
   }
 }
