--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/ukatama/nekobuilder#readme",
   "dependencies": {
+    "ansi-to-html": "^0.4.1",
     "body-parser": "^1.14.2",
     "byline": "^4.2.1",
     "config": "^1.19.0",
