--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "sqlite3": "^3.1.1"
   },
   "devDependencies": {
+    "coveralls": "^2.11.8",
     "gulp": "^3.9.0",
     "jest-cli": "^0.9.0",
     "nekodev": "file:./nekodev",
