--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,8 @@
         "ecmaVersion": 6
     },
     "env": {
+        "es6": true,
+        "jest": true,
         "node": true
     },
     "globals": {
