--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "jest": {
     "collectCoverage": true,
     "collectCoverageOnlyFrom": {
+      "src/builder.js": true,
       "src/spawn.js": true
     },
     "unmockedModulePathPatterns": [
