--- a/Dockerfile-builder
+++ b/Dockerfile-builder
@@ -8,8 +8,9 @@ RUN apt-get install -yq libapparmor-dev
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 
+COPY nekodev /usr/src/app/nekodev
 COPY package.json /usr/src/app/
 RUN npm install
 COPY . /usr/src/app
 
-CMD [ "node", "src/build.js" ]
+CMD [ "node", "src/builder/build.js" ]
